welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:7: error: not found: type i
		if(nums[i]==value)
                        ^