welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {

	var resultat = -1;
	
	for(i <- 0 to nums.length)
	{
		if(nums[i]==value)
		{
			resultat = i;
		}
	}

	return resultat;

	
}
